--- a/layouts/shortcodes/buttonlink.html
+++ b/layouts/shortcodes/buttonlink.html
@@ -1,5 +1,5 @@
 <div class="mt-10">
-  <a class="w-92 bg-blue-300 hover:bg-blue-400 rounded-2xl p-4 text-base text-center"
+  <a class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-blue-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 no-underline"
    href="{{ .Get "href" }}">
   {{ .Inner }}
   </a>
