--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -7,7 +7,7 @@
         {{ .date }}
       </h3>
       <ol role="list"
-          class="mt-4 space-y-4 bg-white/60 px-6 py-4 text-center shadow-xl shadow-blue-900/5 backdrop-blur-sm h-full">
+          class="mt-4 space-y-4 bg-blue-100/60 px-6 py-4 text-center h-full">
         {{- range $index, $event := .events }}
         <li class="schedule-event">
           {{- if ne $index 0 }}
