--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,7 @@
 <a href="/">
-  <img src="/logo.png" class="mt-4 mb-2" width="400" height="174" alt="Open Transport Community Logo" />
+  {{ with resources.Get "img/logo.png" | resources.Fingerprint }}
+    <img src="{{ .Permalink }}" class="mt-4 mb-2" width="{{ .Width }}" height="{{ .Height }}" alt="Open Transport Community Logo" />
+  {{ end }}
 </a>
 
 <h1 class="text-3xl sm:text-5xl font-bold my-4 text-center">
