Move schema.org annotations to external data file
We can't populate this via Hugo parameters unfortunately as their keys are
lower-cased, which breaks the generated JSON.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,15 +6,11 @@
 {{ hugo.Generator }}
 {{ template "_internal/opengraph.html" . }}
 {{ partialCached "css.html" . }}
-{{ if .Params.location }}
+
+{{ $jsonLdFile := "" }}
+{{ with .Params.jsonld }}
+  {{ $jsonLdFile = index $.Site.Data.jsonld . }}
   <script type="application/ld+json">
-  {{ dict
-    "name" .Title
-    "description" .Description
-    "startDate" .Params.startDate
-    "endDate" .Params.endDate
-    "url" .Permalink
-    "location" .Params.location
-      | jsonify | safeJS }}
+  {{ $jsonLdFile | jsonify | safeJS }}
   </script>
 {{ end }}
