Add code of conduct
See https://github.com/public-transport/open-transport-community-conference-orga/issues/6.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,10 @@
 <div class="flex gap-4 mb-4">
   <a class="mt-4 text-sm tracking-tight text-muted-foreground border-b border-dotted"
+    href="/code-of-conduct">
+    Code of Conduct
+  </a>
+
+  <a class="mt-4 text-sm tracking-tight text-muted-foreground border-b border-dotted"
     href="https://www.tu-darmstadt.de/impressum/index.de.jsp">
     Imprint
   </a>
