mobile friendly hero

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -8,7 +8,8 @@
 {{ end }}
 {{ end }}
 
-<section class="my-4 hero-splash container rounded-4xl" style="--hero-image: url('{{ $bgUrl }}')">
+<section class="hero-splash container md:mt-4 lg:mt-8 rounded-b-4xl md:rounded-4xl"
+  style="--hero-image: url('{{ $bgUrl }}')">
   <div class="mx-auto w-full max-w-6xl px-6 py-16 sm:py-20 lg:py-24">
     <div class="grid gap-10 lg:grid-cols-[1.1fr_0.9fr] lg:items-center">
       <div class="text-white">
