--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,10 @@
 {{ hugo.Generator }}
 {{ template "_internal/opengraph.html" . }}
 {{ partialCached "css.html" . }}
+{{ $favicon := resources.Get "favicon.png" }}
+{{ with $favicon }}
+  <link rel="icon" type="image/png" href="{{ .RelPermalink }}" />
+{{ end }}
 
 {{ $jsonLdFile := "" }}
 {{ with .Params.jsonld }}
