Add links to the Mastodon account

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,4 +13,9 @@
     href="https://github.com/public-transport/open-transport.org">
     GitHub
   </a>
+
+  <a class="mt-4 text-sm tracking-tight text-muted-foreground border-b border-dotted"
+    href="https://en.osm.town/@opentransport" rel="me">
+    Mastodon
+  </a>
 </div>
